changed default allowed hosts

--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ DB_HOST=db
 DB_PORT=5432 
 CERTBOT_EMAIL=cabinet@gmail.com
 CERTBOT_DOMAIN=www.rendez-vous.com
-DJANGO_SETTINGS_MODULE=RendezVous.settings.prod
+DJANGO_SETTINGS_MODULE=RendezVous.settings.dev
 DJANGO_ALLOWED_HOSTS=www.rendez-vous.test rendez-vous.test localhost 127.0.0.1
