--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -1,28 +1,17 @@
+asgiref==3.8.1
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+cryptography==44.0.3
 Django==5.2
 djangorestframework==3.16.0
 djangorestframework-simplejwt==5.2.2
-PyJWT==2.4.0
-sqlparse==0.5.3
-
-python-dotenv==1.1.0
-cryptography==44.0.3
-defusedxml==0.7.1
-
-
-pre_commit==4.2.0
-identify==2.6.10
-cfgv==3.4.0
-virtualenv==20.31.2
-nodeenv==1.9.1
-filelock==3.18.0
-platformdirs==4.3.8
-
-typing_extensions==4.13.2
-charset-normalizer==3.4.2
+gunicorn==23.0.0
 idna==3.10
+PyJWT==2.4.0
+python-dotenv==1.1.0
 requests==2.32.3
+sqlparse==0.5.3
 urllib3==2.4.0
-certifi==2025.4.26
+psycopg2-binary==2.9.9
 
-rich==13.5.3
-colorama==0.4.6
