--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -53,7 +53,7 @@ services:
       - 80:80
       - 443:443 
     volumes:
-      - ./nginx/nginx.d/:/etc/nginx/conf.d/
+      - ./nginx/nginx.d/default.conf:/etc/nginx/conf.d/default.conf:ro
       - static_volume:/usr/share/app/static/
 
     depends_on:
