--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,10 +2,10 @@ pipeline {
 
     agent any
     options {
-        pipelineTriggers([
-            githubPush() 
-        ])
-        githubProjectUrl('https://github.com/sfn02/devsecops-demo')
+        githubProjectProperty(repoUrl: 'https://github.com/sfn02/devsecops-demo')
+    }
+        triggers {
+        githubPush()
     }
 
     stages {
