--- a/jenkinsfile
+++ b/jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
 
         stage('Run unit tests'){
             environment{
-                DJANGO_SETTINGS_MODULE='RendezVous.settings.dev'
+                DJANGO_SETTINGS_MODULE='RendezVous.settings.dev' //random comment
             }
 
             steps{
