--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,5 @@
 pipeline {
-//git_
+//git_nn
     agent any
     options {
         githubProjectProperty(projectUrlStr: 'https://github.com/sfn02/devsecops-demo')
