--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
     stages {
         stage('Checkout code') {
             steps {
-                checkout scmGit(branches: [[name: '**/main']], 
+                checkout scmGit(branches: [[name: '*/main']], 
                 extensions: [], 
                 userRemoteConfigs: [[url: 'https://github.com/sfn02/devsecops-demo.git']])
             }
