--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
             steps {
                 checkout scmGit(branches: [[name: '*/main']], 
                 extensions: [], 
-                userRemoteConfigs: [[url: 'https://github.com/sfn02/devsecops-demo.git']])
+                userRemoteConfigs: [[url: 'https://github.com/sfn02/devsecops-demo']])
             }
 
         }
