--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
         githubProjectProperty(projectUrlStr: 'https://github.com/sfn02/devsecops-demo')
     
 
-        disableConcurrentBuilds() // ///
+        disableConcurrentBuilds() 
     }
     triggers { githubPush() }
 
