--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 # pytest.ini
 [pytest]
-DJANGO_SETTINGS_MODULE = RendezVous.settings
+DJANGO_SETTINGS_MODULE = RendezVous.settings.dev
 python_files = tests.py test_*.py *_tests.py
 addopts = 
     --reuse-db
