--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -57,7 +57,7 @@ services:
       - 443:443 
     volumes:
       - static_volume:/usr/share/app/static/
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx.d/default.conf:/etc/nginx/conf.d/default.conf
 
     depends_on:
       - web
