--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -57,7 +57,9 @@ services:
       - 443:443 
     volumes:
       - static_volume:/usr/share/app/static/
-      - ./nginx.d/:/etc/nginx/conf.d
+      - type: bind
+        source: ./nginx/nginx.conf
+        target: /etc/nginx/conf.d/default.conf
 
     depends_on:
       - web
