--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -50,16 +50,16 @@ services:
 
 
   nginx:
-    build: ./nginx
+    build:
+      context: .
+      dockerfile: ./nginx/dockerfile
     container_name: nginx_dev
     ports:
       - 80:80
       - 443:443 
     volumes:
       - static_volume:/usr/share/app/static/
-      - type: bind
-        source: ./nginx/nginx.conf
-        target: /etc/nginx/conf.d/default.conf
+     
 
     depends_on:
       - web
