--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -21,6 +21,12 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/users/auth/login/"] # Or any endpoint that signals app readiness
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
   db:
     image: postgres:17
