--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,8 @@
+http{
+    limit_req_zone $binary_remote_addr zone=general_req_limit:10m rate=5r/s;
+
+
+
 upstream web {
     server web:8000;
 }
@@ -10,6 +15,7 @@ server {
         proxy_pass http://web;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
+        limit_req zone=general_req_limit burst=5 nodelay;
 }
     location /static/ {
         alias /usr/share/app/static/;
@@ -19,5 +25,6 @@ server {
     allow 127.0.0.1;    
     deny all;          
     proxy_set_header Host $host;
+}
 }
 }
