added unit tests

--- a/nginx.d/default.conf
+++ b/nginx.d/default.conf
@@ -1,5 +1,6 @@
 
 limit_req_zone $binary_remote_addr zone=general_req_limit:10m rate=5r/s;
+limit_req_zone $binary_remote_addr zone=auth_req_limit:10m rate=2r/s;
 
 
 
@@ -16,10 +17,26 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         limit_req zone=general_req_limit burst=5 nodelay;
-}
+    }
+
+    location /users/auth/login/ {
+        proxy_pass http://web;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        limit_req zone=auth_req_limit burst=3 nodelay;
+    }
+
+    location /users/auth/register/ {
+        proxy_pass http://web;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        limit_req zone=auth_req_limit burst=3 nodelay;
+    }
+
     location /static/ {
         alias /usr/share/app/static/;
     }
+    
     location /admin/ {
     proxy_pass http://web;
     allow 127.0.0.1;    
