--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -9,7 +9,7 @@ djangorestframework-simplejwt==5.2.2
 gunicorn==23.0.0
 idna==3.10
 PyJWT==2.4.0
-python-dotenv==1.1.0
+dotenv
 requests==2.32.3
 sqlparse==0.5.3
 urllib3==2.4.0
